src/paths/snapshots/mandala__paths__path__path_tests__f64-3d-polygon.snap
---
source: src/paths/path.rs
expression: samples
---
[
    Vector3 {
        x: 1.0,
        y: 0.0,
        z: 0.0,
    },
    Vector3 {
        x: 1.1102230246251565e-16,
        y: 1.0,
        z: 0.0,
    },
    Vector3 {
        x: 6.123233995736766e-17,
        y: 1.0,
        z: 0.0,
    },
    Vector3 {
        x: -0.9999999999999999,
        y: 1.1102230246251565e-16,
        z: 0.0,
    },
    Vector3 {
        x: -1.0,
        y: 1.2246467991473532e-16,
        z: 0.0,
    },
    Vector3 {
        x: -2.220446049250313e-16,
        y: -1.0,
        z: 0.0,
    },
    Vector3 {
        x: -1.8369701987210297e-16,
        y: -1.0,
        z: 0.0,
    },
    Vector3 {
        x: 1.0,
        y: 0.0,
        z: 0.0,
    },
]
